<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_back">

        <TextView
            android:id="@+id/view_head"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:alpha="0"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black_back"
            app:layout_constraintBottom_toTopOf="@+id/viewpager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_head"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintVertical_weight="1"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/while_milk"
            app:tabTextAppearance="@style/TabLayoutTextUnSelected"
            app:tabTextColor="@color/white_back">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graphic"

                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sight" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />
        </com.google.android.material.tabs.TabLayout>

        <top.gochiusa.originalmedia.widget.HorViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintVertical_weight="16" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
