<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_back"
    tools:context=".creation.fragment.GraphicCreateFragment">

    <TextView
        android:id="@+id/tv_create_gra_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:editable="true"
        android:text="@string/title_edit_graphic"
        android:textColor="@color/white_back"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/fl_add_pic"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_margin="30dp"
        android:background="@drawable/shape_oral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_gra_title">

        <ImageView

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:src="@drawable/add_pic" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_finish_graphic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_add_pic">

        <TextView
            android:id="@+id/tv_graphic_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/black_back"
            android:editable="true"
            android:hint="@string/graphic_hint"
            android:textColor="@color/white_back"
            android:textColorHint="@color/gray" />
    </ScrollView>


    <TextView
        android:id="@+id/tv_finish_graphic_add"
        android:layout_width="wrap_content"
        android:layout_margin="4dp"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="@color/white_back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>